--- a/mainfile.html
+++ b/mainfile.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="">
     <title>Azimut-Travel diaries</title>
+   <link rel="stylesheet" href="./mystyle.css">
 </head>
 <body>
     <div id="main_wrapper">
