--- a/main.html
+++ b/main.html
@@ -1,8 +1,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="">
     <title>Azimut-Travel diaries</title>
+    <link rel="stylesheet" href="./mystyle.css">
 </head>
 <body>
     <div id="main_wrapper">
