--- a/website.html
+++ b/website.html
@@ -15,7 +15,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./mystyle.css">
     <title>Azimut-Travel diaries</title>
 </head>
 <body>
