--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href=""></a></li>
+                    <li><a href="./boxes.html" target="_blank">Navigate to boxes</a></li>
                     <li><a href=""></a></li>
                     <li><a href=""></a></li>
                     <li><a href=""></a></li>
@@ -68,6 +68,21 @@
                     <li><a href="">second update</a></li>
                 </ul>
             </div>
+           <div id="last_div" name="helolo">
+               <h2>My Photos</h2>
+           <ul>
+               <li>My List Item 1</li>
+               <li>My List Item 2</li>
+               <li>My List Item 3</li>
+               <li>My List Item 4</li>
+               <li>My List Item 5</li>
+               <li>My List Item 6</li>
+               <li>My List Item 7</li>
+               <li>My List Item 8</li>
+               <li>My List Item 9</li>
+               <li>My List Item 10</li>
+           </ul>
+           </div>
         </footer>
     </div>
 </body>
