--- a/dev-css11.html
+++ b/dev-css11.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="">
     <title>Azimut-Travel diaries</title>
+    <link rel="stylesheet" href="./mystylecss.css">
 </head>
 <body>
     <div id="main_wrapper">
@@ -14,8 +15,8 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
+                    <li><a href="./boxes.html" target="_blank">Navigate to boxes</a></li>
+                    <li><a href="./pagewithbootstrap.html" target="blank">Navigate to bootstrap</a></li>
                     <li><a href=""></a></li>
                     <li><a href=""></a></li>
                 </ul>
@@ -53,7 +54,7 @@
                     <img src="" alt="">
                 </p>
             </div>
-            <div id="myfriends">
+            <div id="myfriends" name = "testing">
                 <h1>My friends</h1>
                 <ul>
                     <li><a href="">Update 1</a></li>
@@ -68,6 +69,22 @@
                     <li><a href="">second Update</a></li>
                 </ul>
             </div>
+            <div id="last_div">
+                <h2>My Photos</h2>
+                <ul>
+                    <li>My list item 1</li>
+                    <li>My list item 2</li>
+                    <li>My list item 3</li>
+                    <li>My list item 4</li>
+                    <li>My list item 5</li>
+                    <li>My list item 6</li>
+                    <li>My list item 7</li>
+                    <li>My list item 8</li>
+                    <li>My list item 9</li>
+                    <li>My list item 10</li>
+                </ul>
+            </div>
+            </h2></div>
         </footer>
     </div>
 </body>
