new html pages, new style

--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <title>Azimut-Travel diaries</title>
     <link rel="stylesheet" href="./mystyle.css">
+    <title>Azimut-Travel diaries</title>
 </head>
 <body>
     <div id="main_wrapper">
@@ -14,8 +15,8 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
+                    <li><a href="./boxes.html" target="_blank">Navigate to boxes</a></li>
+                    <li><a href="./page_with_bootstrap.html">Page with bootstrap</a></li>
                     <li><a href=""></a></li>
                     <li><a href=""></a></li>
                 </ul>
@@ -27,7 +28,7 @@
         <section>
             <article>
                 <h1><img src="" alt="">I'm a great traveller</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore vitae tenetur officiis dolores nesciunt reprehenderit dolorem similique, iure nihil, placeat incidunt impedit facilis asperiores nostrum quis ducimus sit amet a.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum excepturi vitae cum officia, voluptatum reiciendis velit architecto optio maxime eum laborum, eaque praesentium quo ex magnam. Aliquam amet cum asperiores.</p>
             </article>
             <aside>
                 <h1>About the author</h1>
@@ -53,7 +54,7 @@
                     <img src="" alt="">
                 </p>
             </div>
-            <div id="myfriends">
+            <div id="myfriends" name = "testing">
                 <h1>My friends</h1>
                 <ul>
                     <li><a href="">Update 1</a></li>
@@ -68,7 +69,22 @@
                     <li><a href="">second update</a></li>
                 </ul>
             </div>
-        </footer>
+            <div id="last_div">
+                <h2>My Photos</h2>
+                <ul>
+                    <li>My List Item 1</li>
+                    <li>My List Item 2</li>
+                    <li>My List Item 3</li>
+                    <li>My List Item 4</li>
+                    <li>My List Item 5</li>
+                    <li>My List Item 6</li>
+                    <li>My List Item 7</li>
+                    <li>My List Item 8</li>
+                    <li>My List Item 9</li>
+                    <li>My List Item 10</li>
+                </ul>
+            </div>
+     </footer>
     </div>
 </body>
 </html>
