--- a/main.html
+++ b/main.html
@@ -14,8 +14,8 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
+                    <li><a href="./boxes.html" target="_parent">Navigate to boxes</a></li>
+                    <li><a href="./page_with_bootstrap.html">Page with bootstrap</a></li>
                     <li><a href=""></a></li>
                     <li><a href=""></a></li>
                 </ul>
@@ -37,7 +37,7 @@
                 <p>A bit messy</p>
                 <p><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
             </aside>
-        </section>
+        </section>        
         <footer>
             <div id="tweet">
                 <h1>My last tweet</h1>
@@ -53,7 +53,7 @@
                     <img src="" alt="">
                 </p>
             </div>
-            <div id="myfriends">
+            <div id="myfriends" name = "testing">
                 <h1>My friends</h1>
                 <ul>
                     <li><a href="">Update 1</a></li>
@@ -66,6 +66,21 @@
                     <li><a href="">second update</a></li>
                     <li><a href="">second update</a></li>
                     <li><a href="">second update</a></li>
+                </ul>
+            </div>
+            <div id="last_div" name="helolo">
+                <h2>My Photos</h2>
+                <ul>
+                    <li>My List Item 1</li>
+                    <li>My List Item 2</li>
+                    <li>My List Item 3</li>
+                    <li>My List Item 4</li>
+                    <li>My List Item 5</li>
+                    <li>My List Item 6</li>
+                    <li>My List Item 7</li>
+                    <li>My List Item 8</li>
+                    <li>My List Item 9</li>
+                    <li>My List Item 10</li>
                 </ul>
             </div>
         </footer>
