Created my first javascript

--- a/main.html
+++ b/main.html
@@ -3,6 +3,8 @@
     <meta charset="utf-8">
     <title>Azimut-Travel diaries</title>
     <link rel="stylesheet" href="./mystyle.css">
+    <!-- <script src="./first_script.js" ></script> -->
+    <script src="./funtions.js" ></script>
 </head>
 <body>
     <div id="main_wrapper">
