first.java.script

--- a/main.html
+++ b/main.html
@@ -3,7 +3,8 @@
     <meta charset="utf-8">
     <title>Azimut-Travel diaries</title>
     <link rel="stylesheet" href="./mystyle.css">
-    <title>Azimut-Travel diaries</title>
+    <!-- <script src="./myjavascript.js"></script> -->
+    <script src="./functions.js"></script>
 </head>
 <body>
     <div id="main_wrapper">
