--- a/main.html
+++ b/main.html
@@ -1,89 +1,114 @@
 <html>
+
 <head>
     <meta charset="utf-8">
     <title>Azimut-Travel diaries</title>
-    <link rel="stylesheet" href="./mystyle.css">
+    <link rel="stylesheet"
+          href="./mystyle.css">
+          <!-- <script src="./myJavascript.js"></script>   -->
+          <script src='./functions.js'></script>
 </head>
 <body>
     <div id="main_wrapper">
-        <div id="header">
-            <div id="main_title">
-                <img src="" alt="Logo de Azimut" id="logo">
-                    <h1>Azimut</h1>
-                <h2>Travel Diaries</h2>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="./boxes.html" target="_parent">Navigate to boxes</a></li>
-                    <li><a href="./page_with_bootstrap.html">Page with bootstrap</a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                </ul>
-            </nav>
+        <div id="header"></div>
+        <div id="main_title">
+            <img src=""
+                 alt="Logo de Azimut"
+                 id="logo">
+            <h1>Azimut</h1>
+            <h2>Travel Diaries</h2>
         </div>
-        <div banner_image="">
-            <div id="banner_description">Reflections on my holiday througth the HTML world...<a href="" class="red_button">See article<img src="" alt=""></a></div>
+        <nav>
+            <ul>
+                <li><a href="./boxes.html"
+                       target="_parent">Navigate to boxes</a></li>
+                <li><a href="./page_with_bootstrap.html">Page with bootstrap</a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>
+        </nav>
+    </div>
+    <div banner_image="">
+        <div id="banner_description">Reflections on my holiday througth the HTML world...<a href=""
+               class="red_button">See article<img src=""
+                     alt=""></a></div>
+    </div>
+    <section>
+        <article>
+            <h1><img src=""
+                     alt="">I'm a great traveller</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore vitae tenetur officiis dolores
+                nesciunt reprehenderit dolorem similique, iure nihil, placeat incidunt impedit facilis asperiores
+                nostrum quis ducimus sit amet a.</p>
+        </article>
+        <aside>
+            <h1>About the author</h1>
+            <img src=""
+                 alt=""
+                 id="arrow">
+            <p zozor_picture=""><img src=""
+                     alt=""></p>
+            <p>Let me introduce myself</p>
+            <p>A bit messy</p>
+            <p><img src=""
+                     alt=""><img src=""
+                     alt=""><img src=""
+                     alt=""></p>
+        </aside>
+    </section>
+    <footer>
+        <div id="tweet">
+            <h1>My last tweet</h1>
+            <p>Hee-haw!</p>
+            <p>13/12/2018 17:03</p>
         </div>
-        <section>
-            <article>
-                <h1><img src="" alt="">I'm a great traveller</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore vitae tenetur officiis dolores nesciunt reprehenderit dolorem similique, iure nihil, placeat incidunt impedit facilis asperiores nostrum quis ducimus sit amet a.</p>
-            </article>
-            <aside>
-                <h1>About the author</h1>
-                <img src="" alt="" id="arrow">
-                <p zozor_picture=""><img src="" alt=""></p>
-                <p>Let me introduce myself</p>
-                <p>A bit messy</p>
-                <p><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
-            </aside>
-        </section>        
-        <footer>
-            <div id="tweet">
-                <h1>My last tweet</h1>
-                <p>Hee-haw!</p>
-                <p>13/12/2018 17:03</p>
-            </div>
-            <div id="my_pictures">
-                <h1>My pictures</h1>
-                <p>
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                </p>
-            </div>
-            <div id="myfriends" name = "testing">
-                <h1>My friends</h1>
-                <ul>
-                    <li><a href="">Update 1</a></li>
-                    <li><a href="">Update 1</a></li>
-                    <li><a href="">Update 1</a></li>
-                    <li><a href="">Update 1</a></li>
-                </ul>
-                <ul>
-                    <li><a href="">second update</a></li>
-                    <li><a href="">second update</a></li>
-                    <li><a href="">second update</a></li>
-                    <li><a href="">second update</a></li>
-                </ul>
-            </div>
-            <div id="last_div" name="helolo">
-                <h2>My Photos</h2>
-                <ul>
-                    <li>My List Item 1</li>
-                    <li>My List Item 2</li>
-                    <li>My List Item 3</li>
-                    <li>My List Item 4</li>
-                    <li>My List Item 5</li>
-                    <li>My List Item 6</li>
-                    <li>My List Item 7</li>
-                    <li>My List Item 8</li>
-                    <li>My List Item 9</li>
-                    <li>My List Item 10</li>
-                </ul>
-            </div>
-        </footer>
+        <div id="my_pictures">
+            <h1>My pictures</h1>
+            <p>
+                <img src=""
+                     alt="">
+                <img src=""
+                     alt="">
+                <img src=""
+                     alt="">
+                <img src=""
+                     alt="">
+            </p>
+        </div>
+        <div id="myfriends"
+             name="testing">
+            <h1>My friends</h1>
+            <ul>
+                <li><a href="">Update 1</a></li>
+                <li><a href="">Update 1</a></li>
+                <li><a href="">Update 1</a></li>
+                <li><a href="">Update 1</a></li>
+            </ul>
+            <ul>
+                <li><a href="">second update</a></li>
+                <li><a href="">second update</a></li>
+                <li><a href="">second update</a></li>
+                <li><a href="">second update</a></li>
+            </ul>
+        </div>
+        <div id="last_div"
+             name="helolo">
+            <h2>My Photos</h2>
+            <ul>
+                <li>My List Item 1</li>
+                <li>My List Item 2</li>
+                <li>My List Item 3</li>
+                <li>My List Item 4</li>
+                <li>My List Item 5</li>
+                <li>My List Item 6</li>
+                <li>My List Item 7</li>
+                <li>My List Item 8</li>
+                <li>My List Item 9</li>
+                <li>My List Item 10</li>
+            </ul>
+        </div>
+    </footer>
     </div>
 </body>
+
 </html>
