--- a/main.html
+++ b/main.html
@@ -83,6 +83,7 @@
                <li>My List Item 8</li>
                <li>My List Item 9</li>
                <li>My List Item 10</li>
+               <li>My List Item 11</li>
            </ul>
            </div>
         </footer>
