--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8" />
         <link rel="stylesheet" href="style.css" />
         <title>Zozor - Travel diaries</title>
+        <!-- <script src="./first_script.js"></script> -->
+        <script src="./second_script.js"></script>
     </head>
 
     <body>
